@@ -71,7 +71,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<release>11</release>
-
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
